src/components/styles/common.scss
@keyframes pipelines-console-plugin__spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.pipelines-console-plugin__spin {
  animation: pipelines-console-plugin__spin 2s infinite linear;

  @media (prefers-reduced-motion: reduce) {
    animation: none;
  }
}

